src/objects/Password_Policies__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings must be updated as the org&apos;s password policies are updated administratively</description>
    <fields>
        <fullName>Minimum_Characters__c</fullName>
        <label>Minimum Characters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_Lower_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Lower Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Numeric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Numeric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Special_Character__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Special Character</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Upper_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Upper Case</label>
        <type>Checkbox</type>
    </fields>
    <label>Password Policies</label>
</CustomObject>